# ophion

./: NEWS.md  README.md  meson.build
atheme/: atheme.conf
atheme/modules/protocol/: ophion.c
authd/: authd.c  dns.c  meson.build  provider.c  provider.h
authd/providers/: dnsbl.c  opm.c  rdns.c
bandb/: bandb.c  rsdb_sqlite3.c
build_test/: .gitignore
build_test/etc/: ircd.conf
discordd/: discordd.c  meson.build
discordd/tests/: test_codec.c
doc/: credits-past.txt  index.txt  ircd.conf.example  ircd.motd  logfiles.txt  modes.txt  reference.conf  server-version-info.txt
doc/features/: batch.txt  challenge.txt  chathistory.txt  discord.txt  extban.txt  index.txt  invite-notify.txt  labeled-response.txt  message-tags.txt  multiline.txt  read-marker.txt  sasl.txt  services.txt  setname.txt  standard-replies.txt  typing.txt
doc/oper-guide/: cmodes.rst  commands.rst  config.rst  index.rst  intro.rst  oprivs.rst  ucommands.rst  umodes.rst
doc/technical/: capab.txt  hooks.txt  index.txt  ts6-protocol.txt
extensions/: README  hurt.c  ip_cloaking_unified.c  m_roleplay.c  meson.build  sno_whois.c
help/opers/: chathistory  cmode  index  setname
help/users/: index  markread  tagmsg
include/: auth_oper.h  authproc.h  bandbi.h  channel.h  channel_access.h  chmode.h  client.h  defaults.h  discordproc.h  flood.h  hook.h  ircd.h  messages.h  modules.h  msgbuf.h  numeric.h  parse.h  propertyset.h  s_conf.h  s_newconf.h  s_serv.h  s_stats.h  s_user.h  send.h  services.h  services_db.h  services_sync.h  setup.h.meson
ircd/: auth_oper.c  authproc.c  bandbi.c  channel.c  channel_access.c  chm_builtin.c  chmode.c  client.c  conf_parser.c  discordproc.c  extban.c  flood.c  hook.c  hostmask.c  ircd.c  logger.c  match.c  meson.build  modules.c  monitor.c  msgbuf.c  newconf.c  packet.c  parse.c  s_conf.c  s_newconf.c  s_serv.c  s_user.c  send.c  services_core.c  services_db.c  services_sync.c  sslproc.c  supported.c  um_builtin.c
librb/: CREDITS
librb/include/: commio-int.h  librb_config.h.meson  rb_lib.h  rb_linebuf.h  rb_sendbuf.h
librb/src/: arc4random.c  balloc.c  commio.c  epoll.c  export-syms.txt  io_uring.c  kqueue.c  linebuf.c  meson.build  nossl.c  openssl.c  openssl_ratbox.h  patricia.c  poll.c  select.c  sendbuf.c  unix.c
librb/tests/: meson.build  test_patricia.c  test_uring.c
modules/: cap_batch.c  cap_message_tags.c  cap_prop_notify.c  m_accountinfo.c  m_accountoper.c  m_accountset.c  m_certadd.c  m_challenge.c  m_chanset.c  m_chathistory.c  m_cregister.c  m_drop.c  m_ghost.c  m_grant.c  m_group.c  m_identify.c  m_info.c  m_invite.c  m_ircx_access.c  m_ircx_access_server.c  m_ircx_anonkill.c  m_ircx_auditorium.c  m_ircx_auth.c  m_ircx_base.c  m_ircx_comic.c  m_ircx_create.c  m_ircx_event.c  m_ircx_identify.c  m_ircx_listx.c  m_ircx_modes.c  m_ircx_oper.c  m_ircx_oper_autoowner.c  m_ircx_oper_godmode.c  m_ircx_oper_vhost.c  m_ircx_prop.c  m_ircx_prop_adminkey.c  m_ircx_prop_channel_builtins.c  m_ircx_prop_entity_account.c  m_ircx_prop_entity_channel.c  m_ircx_prop_entity_user.c  (+36 more)
modules/core/: m_join.c  m_kick.c  m_kill.c  m_message.c  m_mode.c  m_nick.c  m_part.c  m_server.c  meson.build
ssld/: ssld.c
tests/: test_certfp_oper.py  test_ircx.py  test_misc.py  test_oper_admin.py  test_services.py  test_ssld.py  test_stress.py  test_wsockd.py
tools/: meson.build  setup.py
wsockd/: wsockd.c
